// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionGroup doesn't render when the group isn't visible 1`] = `""`;

exports[`AccordionGroup with toggleCollapsed doesn't render the icon when set to not visible 1`] = `
<section
  className="widget-accordion-group widget-accordion-group-collapsed class-name"
>
  <header
    className="widget-accordion-group-header widget-accordion-group-header-clickable"
    onClick={[MockFunction]}
  >
    header
  </header>
  <div
    className="widget-accordion-group-content-wrapper"
    onTransitionEnd={[Function]}
  >
    <div
      className="widget-accordion-group-content"
    >
      <span>
        content
      </span>
    </div>
  </div>
</section>
`;

exports[`AccordionGroup with toggleCollapsed renders correctly when the group becomes visible and is collapsed 1`] = `
<section
  className="widget-accordion-group widget-accordion-group-collapsed class-name"
>
  <header
    className="widget-accordion-group-header widget-accordion-group-header-clickable widget-accordion-group-header-icon-right"
    onClick={[MockFunction]}
  >
    header
  </header>
  <div
    className="widget-accordion-group-content-wrapper"
    onTransitionEnd={[Function]}
  >
    <div
      className="widget-accordion-group-content"
    >
      <span>
        content
      </span>
    </div>
  </div>
</section>
`;

exports[`AccordionGroup with toggleCollapsed renders correctly when the group becomes visible and is expanded 1`] = `
<section
  className="widget-accordion-group class-name"
>
  <header
    className="widget-accordion-group-header widget-accordion-group-header-clickable widget-accordion-group-header-icon-right"
    onClick={[MockFunction]}
  >
    header
  </header>
  <div
    className="widget-accordion-group-content-wrapper"
    onTransitionEnd={[Function]}
  >
    <div
      className="widget-accordion-group-content"
    >
      <span>
        content
      </span>
    </div>
  </div>
</section>
`;

exports[`AccordionGroup with toggleCollapsed renders correctly when the group is visible and collapsed 1`] = `
<section
  className="widget-accordion-group widget-accordion-group-collapsed class-name"
>
  <header
    className="widget-accordion-group-header widget-accordion-group-header-clickable widget-accordion-group-header-icon-right"
    onClick={[MockFunction]}
  >
    header
  </header>
  <div
    className="widget-accordion-group-content-wrapper"
    onTransitionEnd={[Function]}
  >
    <div
      className="widget-accordion-group-content"
    >
      <span>
        content
      </span>
    </div>
  </div>
</section>
`;

exports[`AccordionGroup with toggleCollapsed renders correctly when the group is visible and expanded 1`] = `
<section
  className="widget-accordion-group class-name"
>
  <header
    className="widget-accordion-group-header widget-accordion-group-header-clickable widget-accordion-group-header-icon-right"
    onClick={[MockFunction]}
  >
    header
  </header>
  <div
    className="widget-accordion-group-content-wrapper"
    onTransitionEnd={[Function]}
  >
    <div
      className="widget-accordion-group-content"
    >
      <span>
        content
      </span>
    </div>
  </div>
</section>
`;

exports[`AccordionGroup with toggleCollapsed renders correctly when the group is visible and gets collapsed 1`] = `
<section
  className="widget-accordion-group widget-accordion-group-collapsed class-name"
>
  <header
    className="widget-accordion-group-header widget-accordion-group-header-clickable widget-accordion-group-header-icon-right"
    onClick={[MockFunction]}
  >
    header
  </header>
  <div
    className="widget-accordion-group-content-wrapper"
    onTransitionEnd={[Function]}
  >
    <div
      className="widget-accordion-group-content"
    >
      <span>
        content
      </span>
    </div>
  </div>
</section>
`;

exports[`AccordionGroup with toggleCollapsed renders correctly when the group is visible and gets expanded 1`] = `
<section
  className="widget-accordion-group class-name"
>
  <header
    className="widget-accordion-group-header widget-accordion-group-header-clickable widget-accordion-group-header-icon-right"
    onClick={[MockFunction]}
  >
    header
  </header>
  <div
    className="widget-accordion-group-content-wrapper"
    onTransitionEnd={[Function]}
  >
    <div
      className="widget-accordion-group-content"
    >
      <span>
        content
      </span>
    </div>
  </div>
</section>
`;

exports[`AccordionGroup without toggleCollapsed displays the content when the group becomes visible 1`] = `
<section
  className="widget-accordion-group class-name"
>
  <header
    className="widget-accordion-group-header"
  >
    header
  </header>
  <div
    className="widget-accordion-group-content-wrapper"
    onTransitionEnd={[Function]}
  >
    <div
      className="widget-accordion-group-content"
    >
      <span>
        content
      </span>
    </div>
  </div>
</section>
`;

exports[`AccordionGroup without toggleCollapsed displays the content when the group is visible 1`] = `
<section
  className="widget-accordion-group class-name"
>
  <header
    className="widget-accordion-group-header"
  >
    header
  </header>
  <div
    className="widget-accordion-group-content-wrapper"
    onTransitionEnd={[Function]}
  >
    <div
      className="widget-accordion-group-content"
    >
      <span>
        content
      </span>
    </div>
  </div>
</section>
`;
